--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -13,9 +13,11 @@
 }
 
 .modal-container {
-  width: 25%;
-  height: 70%;
+  /* width: 25%;
+  height: 70%; */
   background-image: linear-gradient(180deg, aqua, #cfffcf);
   border-radius: 15px;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
