--- a/src/components/NavBar/LogIn.css
+++ b/src/components/NavBar/LogIn.css
@@ -53,7 +53,7 @@
   transform: translate(-59px, 0px);
 }
 
-.footer-logIn {
+.logIn-submition {
   padding: 10px;
   transform: translate(0px, 15px);
 }
